# github-issue-similarity

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/services/: github_service.py  similarity_service.py
docs/: deployment.md  webhook-setup.md
scripts/: setup-dev.sh
