[project]
name = "github-issue-similarity"
version = "0.1.0"
description = "A system to detect similar issues and provide recommendations for duplicate GitHub issues using natural language processing"
authors = [
    {name = "Yusaku Goto", email = "yusaku.g@inside.ai"}
]
dependencies = [
    "fastapi>=0.115.3",
    "uvicorn>=0.32.0",
    "PyGithub>=2.4.0",
    "sentence-transformers>=3.2.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/aii-goto-yusaku/github-issue-similarity"
Repository = "https://github.com/aii-goto-yusaku/github-issue-similarity.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "mypy>=1.9.0",
    "pytest>=8.1.1",
]